<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.com.onofre.alejandro.usuario.MainActivity">


    <LinearLayout
        android:id="@+id/dlgFecha"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNombre"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/strFullName"
            android:duplicateParentState="true"
            tools:editable="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/strSetDate"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/edtBirthday"
                android:hint="@string/strBirthday"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="right|center_vertical"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textIsSelectable="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:showDividers="beginning|middle|end"
            android:background="@color/colorPrimaryLight">

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtDate"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:measureAllChildren="false" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <Button
                    android:text="@string/strBtnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2" />

                <Button
                    android:text="@string/strBtnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDateOk" />
                </LinearLayout>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/edtPhone"
            android:hint="@string/strPhone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtEmail"
            android:hint="@string/strEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/edtUserDesc"
            android:hint="@string/strUserDesc"
            android:lines="2" />

        <Button
            android:text="@string/strBtnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSiguiente" />


    </LinearLayout>


</RelativeLayout>
