<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.com.onofre.alejandro.usuario.DetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/strConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="normal|bold|italic" />
        <TextView
            android:text="@string/strFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtFullName"
            android:paddingTop="16dp"
            android:textStyle="normal|bold"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/strBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblBirthday"
            android:paddingTop="8dp" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtBirthday"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:textStyle="normal|bold" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/strPhoneAbbrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblPhone"
            android:paddingTop="8dp" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPhone"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:textStyle="normal|bold" />
     </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/strEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblEmail"
            android:paddingTop="8dp" />
        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmail"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:text="@string/strDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserDesc"
                android:paddingLeft="16dp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <Button
            android:text="@string/strBtnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEdit"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
